crates/uitest/fixtures/ty_check/assign.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/assign.fe
---
error[8-0000]: type mismatch
   ┌─ assign.fe:33:11
   │
33 │     g.t = 1
   │           ^ expected `bool`, but `{integer}` is given

error[8-0000]: type mismatch
   ┌─ assign.fe:44:17
   │
44 │             t = 1
   │                 ^ expected `T`, but `{integer}` is given

error[8-0017]: not assignable left-hand side of assignment
   ┌─ assign.fe:35:5
   │
35 │     Gen { t: false }.t = true
   │     ^^^^^^^^^^^^^^^^^^ cant assign to this expression

error[8-0017]: not assignable left-hand side of assignment
   ┌─ assign.fe:37:5
   │
37 │     Counter { value: 1 }.value += 1
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ cant assign to this expression

error[8-0017]: not assignable left-hand side of assignment
   ┌─ assign.fe:39:5
   │
39 │     1 = 1
   │     ^ cant assign to this expression

error[8-0018]: left-hand side of assignment is immutable
   ┌─ assign.fe:25:9
   │
24 │     fn set_inner(self, x: i32, y: u32) {
   │                  ---- try changing to `mut self`
25 │         self.inner = Inner { x, y }
   │         ^^^^^^^^^^ immutable assignment

error[8-0018]: left-hand side of assignment is immutable
   ┌─ assign.fe:30:5
   │
29 │ fn foo<T>(x: i32, mut y: own u32, opt: Option<T>, opt2: Option<i32>) {
   │           - try changing to `mut x`
30 │     x = 1
   │     ^ immutable assignment

error[8-0018]: left-hand side of assignment is immutable
   ┌─ assign.fe:44:13
   │
43 │         Some(mut t) => {
   │              ----- try changing to `mut t`
44 │             t = 1
   │             ^ immutable assignment

error[8-0018]: left-hand side of assignment is immutable
   ┌─ assign.fe:51:13
   │
50 │         Some(x) => {
   │              - try changing to `mut x`
51 │             x = 1
   │             ^ immutable assignment

error[8-0031]: type annotation is needed
   ┌─ assign.fe:39:5
   │
39 │     1 = 1
   │     ^
   │     │
   │     type annotation is needed
   │     no default type is provided for an integer type. consider giving integer type
